[gd_scene load_steps=56 format=3 uid="uid://d3fp1m7nc0qhp"]

[ext_resource type="Script" path="res://Scripts/AI/FlyToTargetAI.gd" id="1_jrmxm"]
[ext_resource type="Script" path="res://Scripts/AI/MushroomValleyBoss/MushroomBirdBossAI.gd" id="1_lhm3l"]
[ext_resource type="PackedScene" uid="uid://djy1l8j2ndan4" path="res://Models/Characters/MushroomMagpie/MushroomMagpie.glb" id="2_4g5hf"]
[ext_resource type="PackedScene" uid="uid://d0du5q2jmm5nb" path="res://Scenes/Effects/Particles/BirdBossMediumAttackEffect.tscn" id="2_43r61"]
[ext_resource type="Script" path="res://Scripts/AI/MushroomValleyBoss/BirdBossFlyingIdleState.gd" id="2_f4shs"]
[ext_resource type="PackedScene" uid="uid://qbw3al5veunh" path="res://Scenes/AI/PursueTargetAI.tscn" id="2_yfdji"]
[ext_resource type="PackedScene" uid="uid://bbj4miag5qsc" path="res://Scenes/Debug/DebugSphere.tscn" id="3_4l7u7"]
[ext_resource type="Script" path="res://Scripts/AI/MushroomValleyBoss/BirdBossFlyingLocationPursuitState.gd" id="3_7pmko"]
[ext_resource type="Script" path="res://Scripts/AI/MushroomValleyBoss/BirdBossFlyingLongRangeAttackState.gd" id="4_1gnnd"]
[ext_resource type="PackedScene" uid="uid://cf7s8g750xcju" path="res://Scenes/Debug/DebugText.tscn" id="4_o2573"]
[ext_resource type="Script" path="res://Scripts/AI/AreaAttack.gd" id="5_1b2q4"]
[ext_resource type="Script" path="res://Scripts/AI/MushroomValleyBoss/BirdBossFlyingMediumRangeAttackState.gd" id="5_4gd0j"]
[ext_resource type="Script" path="res://Scripts/AI/MushroomValleyBoss/BirdBossFlyingShortRangeAttackState.gd" id="5_nm2xt"]
[ext_resource type="Script" path="res://Scripts/AI/MushroomValleyBoss/BirdBossFlyingPlayerCircleState.gd" id="5_ssaek"]
[ext_resource type="Script" path="res://Scripts/AI/MushroomValleyBoss/BirdBossFlyingPlayerPursuitState.gd" id="6_uhfup"]
[ext_resource type="PackedScene" uid="uid://c5o00ayi067bc" path="res://Scenes/Effects/Particles/MultipleSlashEffects.tscn" id="6_waoxi"]
[ext_resource type="Script" path="res://Scripts/AI/MushroomValleyBoss/BirdBossGroundedIdleState.gd" id="7_dqtiy"]
[ext_resource type="Script" path="res://Scripts/Animation/BirdBossAnimationTree.gd" id="7_nam30"]
[ext_resource type="Script" path="res://Scripts/AI/MushroomValleyBoss/BirdBossFlyingFallState.gd" id="7_psyr0"]
[ext_resource type="Script" path="res://Scripts/AI/ProjectileAttack.gd" id="7_tiypd"]
[ext_resource type="PackedScene" uid="uid://bdo8gj7vydfqb" path="res://Scenes/Projectiles/MushroomProjectile.tscn" id="8_icupn"]
[ext_resource type="Script" path="res://Scripts/AI/MushroomValleyBoss/BirdBossGroundedLongRangeAttackState.gd" id="8_lytyi"]
[ext_resource type="Script" path="res://Scripts/AI/MushroomValleyBoss/BirdBossGroundedPlayerPursuitState.gd" id="9_aoqd3"]
[ext_resource type="Script" path="res://Scripts/AI/MushroomValleyBoss/BirdBossGroundedShortRangeAttackState.gd" id="10_0n2cc"]
[ext_resource type="Script" path="res://Scripts/AI/MushroomValleyBoss/BirdBossFlyingRiseUpState.gd" id="11_6a5yb"]
[ext_resource type="Script" path="res://Scripts/AI/MushroomValleyBoss/BirdBossFlyingComeDownState.gd" id="12_o1j51"]
[ext_resource type="Script" path="res://Scripts/AI/MushroomValleyBoss/BirdBossGroundedKnockedDownState.gd" id="12_smtrd"]
[ext_resource type="Script" path="res://Scripts/AI/MushroomValleyBoss/BirdBossDeadState.gd" id="13_pjban"]
[ext_resource type="Script" path="res://Scripts/AI/MushroomValleyBoss/BirdBossGroundedMediumRangeAttackState.gd" id="15_sre7i"]
[ext_resource type="PackedScene" uid="uid://gwlsad3v7l5s" path="res://Scenes/Characters/Health.tscn" id="19_1tisk"]
[ext_resource type="PackedScene" uid="uid://dd55852bglfak" path="res://Scenes/Characters/StatusHealth.tscn" id="20_rc6y4"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_e1enu"]
radius = 0.75
height = 3.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_q7q2k"]

[sub_resource type="BoxMesh" id="BoxMesh_8llew"]
size = Vector3(3.03, 0.08, 0.57)

[sub_resource type="PrismMesh" id="PrismMesh_apfvd"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lmbc8"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="Animation" id="Animation_waxrs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BirdBossMediumAttackEffect:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_41jed"]
resource_name = "flying_short_range_attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -12.5664)]
}

[sub_resource type="Animation" id="Animation_1wl6u"]
resource_name = "grounded_short_range_attack"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-1.5708, 0, 0), Vector3(-1.5708, -12.5664, 0), Vector3(0, -12.5664, 0)]
}

[sub_resource type="Animation" id="Animation_gs6jc"]
resource_name = "medium_range_attack"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.261799, 0), Vector3(0, 0, 0), Vector3(0, -0.261799, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BirdBossMediumAttackEffect:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_72kit"]
_data = {
"RESET": SubResource("Animation_waxrs"),
"flying_short_range_attack": SubResource("Animation_41jed"),
"grounded_short_range_attack": SubResource("Animation_1wl6u"),
"medium_range_attack": SubResource("Animation_gs6jc")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_6asse"]
radius = 2.5

[sub_resource type="SphereShape3D" id="SphereShape3D_bco1p"]
radius = 5.6719

[sub_resource type="SphereShape3D" id="SphereShape3D_ym0c1"]
radius = 2.96485

[sub_resource type="SphereShape3D" id="SphereShape3D_l42n4"]
radius = 1.99259

[sub_resource type="SphereShape3D" id="SphereShape3D_yqm60"]
radius = 1.1654

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_x8bcn"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f1rom"]
animation = &"flying_short_range_attack"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_dft5c"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t2aup"]
animation = &"grounded_short_range_attack"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_0pbir"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vlrts"]
animation = &"medium_range_attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ev00a"]
animation = &"RESET"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_uxuku"]
graph_offset = Vector2(-588.602, -40.7903)
nodes/flying_short_range_attack/node = SubResource("AnimationNodeOneShot_x8bcn")
nodes/flying_short_range_attack/position = Vector2(-660, 20)
nodes/flying_short_range_attack_anim/node = SubResource("AnimationNodeAnimation_f1rom")
nodes/flying_short_range_attack_anim/position = Vector2(-1020, 120)
nodes/grounded_short_range_attack/node = SubResource("AnimationNodeOneShot_dft5c")
nodes/grounded_short_range_attack/position = Vector2(-300, 180)
nodes/grounded_short_range_attack_anim/node = SubResource("AnimationNodeAnimation_t2aup")
nodes/grounded_short_range_attack_anim/position = Vector2(-680, 340)
nodes/medium_range_attack/node = SubResource("AnimationNodeOneShot_0pbir")
nodes/medium_range_attack/position = Vector2(80, 260)
nodes/medium_range_attack_anim/node = SubResource("AnimationNodeAnimation_vlrts")
nodes/medium_range_attack_anim/position = Vector2(-240, 480)
nodes/reset/node = SubResource("AnimationNodeAnimation_ev00a")
nodes/reset/position = Vector2(-880, -40)
node_connections = [&"flying_short_range_attack", 0, &"reset", &"flying_short_range_attack", 1, &"flying_short_range_attack_anim", &"grounded_short_range_attack", 0, &"flying_short_range_attack", &"grounded_short_range_attack", 1, &"grounded_short_range_attack_anim", &"medium_range_attack", 0, &"grounded_short_range_attack", &"medium_range_attack", 1, &"medium_range_attack_anim", &"output", 0, &"medium_range_attack"]

[sub_resource type="ViewportTexture" id="ViewportTexture_n4p5q"]
viewport_path = NodePath("SubViewport")

[node name="MushroomBirdBoss" type="CharacterBody3D"]
script = ExtResource("1_lhm3l")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CapsuleShape3D_e1enu")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true
radius = 2.0

[node name="Visuals" type="Node3D" parent="."]

[node name="MushroomMagpie" parent="Visuals" instance=ExtResource("2_4g5hf")]

[node name="Skeleton3D" parent="Visuals/MushroomMagpie/Rig" index="0"]
bones/7/rotation = Quaternion(0.310475, 0.000474975, 0.000474975, 0.984475)
bones/9/rotation = Quaternion(0.810608, -2.09423e-07, -9.66321e-08, 0.58559)
bones/10/rotation = Quaternion(0.750429, 2.46821e-08, 1.95678e-07, 0.660951)
bones/11/rotation = Quaternion(-0.245456, -1.15562e-07, -2.92607e-08, 0.969408)
bones/12/rotation = Quaternion(0.180687, -1.56076e-14, 6.40831e-16, 0.983541)
bones/12/scale = Vector3(0.836697, 0.836696, 0.836697)
bones/13/rotation = Quaternion(0.227744, 0.667896, 0.6725, -0.223141)
bones/14/rotation = Quaternion(-1.44383e-06, 0.707106, 3.64115e-07, 0.707107)
bones/15/rotation = Quaternion(-0.227744, 0.667896, 0.6725, 0.223141)
bones/16/rotation = Quaternion(-0.707106, -1.31791e-06, 0.707107, -2.34169e-06)
bones/18/rotation = Quaternion(0.106227, 0.13996, -0.78416, 0.595163)
bones/20/rotation = Quaternion(-0.00409646, 5.57016e-06, 0.0912637, 0.995818)
bones/21/rotation = Quaternion(0.000183627, -1.03469e-07, 0.0509761, 0.9987)
bones/22/rotation = Quaternion(-0.33416, 0.0380341, -0.0180806, 0.941575)
bones/24/rotation = Quaternion(0.30787, -0.0384164, -0.0192801, 0.950457)
bones/28/rotation = Quaternion(-0.00108408, 0.00144077, -0.604339, 0.796726)
bones/30/rotation = Quaternion(-0.000705274, 0.00166284, -0.393205, 0.919449)
bones/32/rotation = Quaternion(-0.00130365, 0.00124217, -0.726722, 0.68693)
bones/34/rotation = Quaternion(-0.00410807, -0.00210916, -0.70539, 0.708805)
bones/38/rotation = Quaternion(5.44161e-06, 5.34701e-06, -0.733108, 0.680112)
bones/40/rotation = Quaternion(0.989379, -1.07726e-14, 2.35886e-07, 0.14536)
bones/42/rotation = Quaternion(0.979373, 2.40874e-08, 1.16751e-07, -0.20206)
bones/43/rotation = Quaternion(0.18215, -4.69014e-07, 4.61733e-07, 0.983271)
bones/44/rotation = Quaternion(0.106227, -0.139961, 0.784161, 0.595163)
bones/46/rotation = Quaternion(-0.00409646, -5.5671e-06, -0.0912637, 0.995818)
bones/47/rotation = Quaternion(0.000183629, 1.04972e-07, -0.0509761, 0.9987)
bones/49/rotation = Quaternion(0.11317, -0.0596356, 0.344905, 0.92988)
bones/50/rotation = Quaternion(0.30787, 0.0384165, 0.0192801, 0.950457)
bones/52/rotation = Quaternion(-0.0013067, -0.00123895, 0.728419, 0.685129)
bones/56/rotation = Quaternion(-0.000705283, -0.00166285, 0.393205, 0.919449)
bones/57/rotation = Quaternion(1.6699e-09, 2.24149e-07, 2.30968e-07, 1)
bones/58/rotation = Quaternion(-0.00130365, -0.0012422, 0.726721, 0.68693)
bones/60/rotation = Quaternion(-0.00410807, 0.00210913, 0.70539, 0.708805)
bones/64/rotation = Quaternion(5.46383e-06, -5.33027e-06, 0.733108, 0.680112)
bones/68/rotation = Quaternion(-0.147588, 0.0167928, -0.206175, 0.967175)
bones/70/rotation = Quaternion(-0.147588, -0.0167928, 0.206175, 0.967175)
bones/72/rotation = Quaternion(-0.436984, -0.555918, -0.436984, 0.555918)
bones/73/rotation = Quaternion(-0.785832, -0.0236242, -0.01857, 0.61771)
bones/75/rotation = Quaternion(5.38404e-08, -1.29688e-07, 0.629095, 0.777328)
bones/76/rotation = Quaternion(1.00231e-08, -1.15782e-09, 0.0395262, 0.999219)
bones/77/rotation = Quaternion(-0.0724864, 0.0780319, -0.728505, 0.676711)
bones/78/rotation = Quaternion(0.103839, -0.0187915, 0.173727, 0.979124)
bones/79/rotation = Quaternion(0.0700357, -0.0754467, -0.729002, 0.676726)
bones/81/rotation = Quaternion(-0.436984, 0.555918, 0.436984, 0.555918)
bones/82/rotation = Quaternion(-0.785832, 0.0236242, 0.01857, 0.61771)
bones/84/rotation = Quaternion(5.38404e-08, 1.29688e-07, -0.629095, 0.777328)
bones/85/rotation = Quaternion(1.00231e-08, 1.15782e-09, -0.0395262, 0.999219)
bones/86/rotation = Quaternion(-0.0724864, -0.0780319, 0.728505, 0.676711)
bones/87/rotation = Quaternion(0.103839, 0.0187915, -0.173727, 0.979124)
bones/88/rotation = Quaternion(0.0700357, 0.0754467, 0.729002, 0.676726)

[node name="Mushroom_2" parent="Visuals/MushroomMagpie/Rig/Skeleton3D" index="0"]
transform = Transform3D(0.836696, -0.000635081, 0.000884201, 0.000732171, 0.83119, -0.095828, -0.000805646, 0.0958287, 0.83119, -0.00125277, 4.22497, 0.100403)

[node name="EyeLeft" parent="Visuals/MushroomMagpie/Rig/Skeleton3D" index="1"]
transform = Transform3D(-0.0021822, 0.172861, -0.227331, -0.276605, -0.0578498, -0.0413335, -0.0710654, 0.219858, 0.167861, 0.497419, 3.67159, 0.590195)

[node name="EyeRight" parent="Visuals/MushroomMagpie/Rig/Skeleton3D" index="2"]
transform = Transform3D(0.00252943, 0.172334, 0.227728, -0.276601, 0.0581522, -0.0409348, -0.0710699, -0.220192, 0.167421, -0.498012, 3.67072, 0.591154)

[node name="Fluff_001" parent="Visuals/MushroomMagpie/Rig/Skeleton3D" index="3"]
transform = Transform3D(-0.12364, 5.98497e-08, 3.05392e-08, -1.86692e-08, -0.046894, 0.0724422, 9.92435e-08, 0.065741, 0.0516741, -0.0126134, 2.13959, 0.878536)

[node name="Fluff_002" parent="Visuals/MushroomMagpie/Rig/Skeleton3D" index="4"]
transform = Transform3D(0.169897, -1.66343e-07, -1.28124e-07, -1.15121e-07, -0.14078, 0.0692801, -1.91733e-07, -0.0628715, -0.15513, -0.0126134, 2.12413, -1.15356)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Visuals"]
transform = Transform3D(1.5, 0, 0, 0, -6.55671e-08, -1.5, 0, 1.5, -6.55671e-08, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_q7q2k")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Visuals"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
visible = false
mesh = SubResource("BoxMesh_8llew")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Visuals"]
transform = Transform3D(0.99947, -0.0325446, 1.42257e-09, 0, -4.37114e-08, -1, 0.0325446, 0.99947, -4.36882e-08, 0, 0, 1.47673)
visible = false
mesh = SubResource("PrismMesh_apfvd")
surface_material_override/0 = SubResource("StandardMaterial3D_lmbc8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Visuals"]
libraries = {
"": SubResource("AnimationLibrary_72kit")
}

[node name="BirdBossMediumAttackEffect" parent="Visuals" instance=ExtResource("2_43r61")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.22041)
emitting = false

[node name="States" type="Node" parent="."]

[node name="FlyingIdleState" type="Node" parent="States"]
script = ExtResource("2_f4shs")

[node name="FlyingLocationPursuitState" type="Node" parent="States"]
script = ExtResource("3_7pmko")
action_points = -1

[node name="FlyingShortRangeAttackState" type="Node" parent="States" node_paths=PackedStringArray("short_range_attack")]
script = ExtResource("5_nm2xt")
short_range_attack = NodePath("../../ShortRangeAttack")
action_points = -1

[node name="FlyingMediumRangeAttackState" type="Node" parent="States" node_paths=PackedStringArray("medium_attack")]
script = ExtResource("5_4gd0j")
medium_attack = NodePath("../../MediumRangeAttack")
action_points = -1

[node name="FlyingLongRangeAttackState" type="Node" parent="States" node_paths=PackedStringArray("projectile_attack")]
script = ExtResource("4_1gnnd")
projectile_attack = NodePath("../../ProjectileAttack")
action_points = -1

[node name="FlyingPlayerCircleState" type="Node" parent="States"]
script = ExtResource("5_ssaek")
action_points = -1

[node name="FlyingPlayerPursuitState" type="Node" parent="States"]
script = ExtResource("6_uhfup")
action_points = -1

[node name="FlyingFallState" type="Node" parent="States"]
script = ExtResource("7_psyr0")

[node name="FlyingRiseUp" type="Node" parent="States"]
script = ExtResource("11_6a5yb")

[node name="FlyingComeDown" type="Node" parent="States"]
script = ExtResource("12_o1j51")

[node name="GroundedIdleState" type="Node" parent="States"]
script = ExtResource("7_dqtiy")

[node name="GroundedShortRangeAttackState" type="Node" parent="States" node_paths=PackedStringArray("short_range_attack")]
script = ExtResource("10_0n2cc")
short_range_attack = NodePath("../../ShortRangeAttack")

[node name="GroundedMediumRangeAttackState" type="Node" parent="States" node_paths=PackedStringArray("medium_attack")]
script = ExtResource("15_sre7i")
medium_attack = NodePath("../../MediumRangeAttack")

[node name="GroundedLongRangeAttackState" type="Node" parent="States" node_paths=PackedStringArray("projectile_attack")]
script = ExtResource("8_lytyi")
projectile_attack = NodePath("../../ProjectileAttack")

[node name="GroundedPlayerPursuitState" type="Node" parent="States"]
script = ExtResource("9_aoqd3")

[node name="GroundedKnockedDownState" type="Node" parent="States"]
script = ExtResource("12_smtrd")

[node name="DeadState" type="Node" parent="States"]
script = ExtResource("13_pjban")

[node name="FlyToTargetAI" type="Node" parent="."]
script = ExtResource("1_jrmxm")

[node name="CircularFlightHelper" type="Node3D" parent="FlyToTargetAI"]
top_level = true

[node name="CircularFlightTarget" type="Node3D" parent="FlyToTargetAI/CircularFlightHelper"]

[node name="DebugSphere" parent="FlyToTargetAI/CircularFlightHelper/CircularFlightTarget" instance=ExtResource("3_4l7u7")]

[node name="PursueTargetAI" parent="." node_paths=PackedStringArray("character_body", "nav_agent") instance=ExtResource("2_yfdji")]
character_body = NodePath("..")
nav_agent = NodePath("../NavigationAgent3D")

[node name="ShortRangeAttack" type="Area3D" parent="." node_paths=PackedStringArray("particle_effect")]
script = ExtResource("5_1b2q4")
attack_delay = 0.3
damage = 30.0
particle_effect = NodePath("MultipleSlashEffects")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ShortRangeAttack"]
shape = SubResource("SphereShape3D_6asse")

[node name="MultipleSlashEffects" parent="ShortRangeAttack" instance=ExtResource("6_waoxi")]
transform = Transform3D(2.18557e-08, 0.5, -4.37114e-08, 0.5, -2.18557e-08, 0, -1.91069e-15, -4.37114e-08, -0.5, 0, 0.440189, -0.942098)

[node name="MediumRangeAttack" type="Area3D" parent="."]
script = ExtResource("5_1b2q4")
attack_duration = 3.0
damage = 25.0

[node name="CollisionShape3D_4" type="CollisionShape3D" parent="MediumRangeAttack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.77101, 17.0922)
shape = SubResource("SphereShape3D_bco1p")

[node name="CollisionShape3D_3" type="CollisionShape3D" parent="MediumRangeAttack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.556583, 11.5693)
shape = SubResource("SphereShape3D_ym0c1")

[node name="CollisionShape3D_2" type="CollisionShape3D" parent="MediumRangeAttack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.264776, 7.24051)
shape = SubResource("SphereShape3D_l42n4")

[node name="CollisionShape3D_1" type="CollisionShape3D" parent="MediumRangeAttack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.207743, 4.46288)
shape = SubResource("SphereShape3D_yqm60")

[node name="ProjectileAttack" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.83603, 3.26915)
script = ExtResource("7_tiypd")
projectile_scene = ExtResource("8_icupn")
range = 30.0

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Visuals")
tree_root = SubResource("AnimationNodeBlendTree_uxuku")
anim_player = NodePath("../Visuals/AnimationPlayer")
parameters/flying_short_range_attack/active = false
parameters/flying_short_range_attack/internal_active = false
parameters/flying_short_range_attack/request = 0
parameters/grounded_short_range_attack/active = false
parameters/grounded_short_range_attack/internal_active = false
parameters/grounded_short_range_attack/request = 0
parameters/medium_range_attack/active = false
parameters/medium_range_attack/internal_active = false
parameters/medium_range_attack/request = 0
script = ExtResource("7_nam30")

[node name="Health" parent="." instance=ExtResource("19_1tisk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.79722, 0)
max_health = 1000.0

[node name="StatusHealth" parent="." instance=ExtResource("20_rc6y4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.19496, 0)
max_health = 50.0

[node name="DebugText" parent="." instance=ExtResource("4_o2573")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12.1676, 0)
texture = SubResource("ViewportTexture_n4p5q")

[editable path="Visuals/MushroomMagpie"]
